--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Memorizr</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+  <head>
+    <%= render :partial => '/layouts/head' %>
+  </head>
+  <body>
+    <%= render :partial => '/layouts/top' %>
+    <%= render :partial => '/layouts/menu' %>
+    <%= yield %>
+  </body>
 </html>
