Added translation & save feature

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,4 +1,4 @@
 <ul>
-  <li><%= link_to 'My words', '#' %></li>
-  <li><%= link_to 'Translate', '#' %></li>
+  <li><%= link_to 'My words', words_path %></li>
+  <li><%= link_to 'Translate', new_word_path %></li>
 </ul>
