--- a/app/views/layouts/_left_menu.html.erb
+++ b/app/views/layouts/_left_menu.html.erb
@@ -1,4 +1,4 @@
-<ul>
+<ul id="left-menu">
   <li><%= link_to 'My words', words_path %></li>
   <li><%= link_to 'Translate', new_word_path %></li>
 </ul>
