--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,11 +1,27 @@
-<% if @words.empty? %>
-  <div class="notice">You haven't got any words yet.</div>
-<% else %>
-  <ul>
-    <% @words.each do |word| %>
-      <li>
-        <%= word.value %>
-      </li>
-    <% end %>
-  </ul>
-<% end %>
+<%= render :partial => 'filter' %>
+
+<div class="box" id="words-index-box">
+  <h1>My words</h1>
+  <% if @words.empty? %>
+    <div class="notice">You haven't got any words yet.</div>
+  <% else %>
+    <ul class="custom" id="my-words">
+      <% @words.each do |word| %>
+        <li>
+          <dl>
+            <dt>
+              <%= word.value %>
+            </dt>
+            <dd>
+              <ol>
+                <% word.meanings.each do |meaning|  %>
+                  <li><%= meaning.value %></li>
+                <% end %>
+              </ol>
+            </dd>
+          </dl>
+        </li>
+      <% end %>
+    </ul>
+  <% end %>
+</div>
