--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -2,8 +2,8 @@
 *   very dark blue:   #000b1d
 *   dark blue:        #002d77
 *   middle blue:      #3b73cf
-*   light blue:       #77a1e5
-*   very light blue:  #95baf8
+*   light blue:       #BED0ED
+*   very light blue:  #2d69a9
 */
 
 #wrapper {
@@ -16,13 +16,13 @@ a {
   font-weight: bold;
 }
 
-input[type=submit]::-moz-focus-inner, input[type=button]::-moz-focus-inner {
-    border : 0px;
+input::-moz-focus-inner, input::-moz-focus-inner {
+  border : 0px;
 }
 
 /*for IE8 */
-a, input[type=submit]:focus, input[type=button]:focus {
-    outline : none;
+a, input:focus, input:focus {
+  outline : none;
 }
 
 
@@ -34,7 +34,7 @@ h1 {
   font-size: 18px;
   margin: 0 0 25px;
   padding: 25px 35px 20px;
-  color: #002d77;
+  color: #fff;
   -moz-border-radius-topleft: 15px;
   -moz-border-radius-topright: 15px;
   position: absolute;
@@ -42,7 +42,7 @@ h1 {
   left: 0;
   width: 608px;
   z-index: 1;
-  background: #95baf8;
+  background: #002D77;
   border-bottom: 1px #002d77 solid;
 }
 
@@ -72,9 +72,9 @@ input {
   position: absolute;
   top: 18px;
   left: 0;
-  height: 30px;
-  padding: 15px 10px 0;
-  font-size: 14px;
+  height: 18px;
+  padding: 10px 15px;
+  font-size: 15px;
   border: 1px solid #002d77;
   -moz-border-radius: 10px;
 }
@@ -83,35 +83,27 @@ select {
   position: absolute;
   top: 18px;
   left: 0;
-  height: 45px;
-  padding: 13px 15px 10px;
+  height: 40px;
+  padding: 10px 15px;
   font-size: 14px;
   border: 1px solid #002d77;
   -moz-border-radius: 10px;
 }
 
-option {
-  padding: 5px;
-  font-size: 12px;
-  text-align: center;
-  border: 1px solid #002d77;
-}
-
 .buttons {
-  height: 45px;
+  height: 40px;
 }
 
 .buttons input[type=submit] {
   padding: 10px;
-  background: #3b73cf;
+  background: #2d69a9;
   cursor: pointer;
   width: 100px;
   height: 40px;
   top: 5px;
-}
-
-.buttons input[type=submit]:hover {
-  background: #95baf8;
+  font-size: 14px;
+  color: #fff;
+  font-weight: bold;
 }
 
 #logo {
@@ -171,7 +163,7 @@ option {
 }
 
 .box {
-  background: #77a1e5;
+  background: #BED0ED;
   border: 1px #002d77 solid;
   -moz-border-radius: 15px;
   padding: 100px 35px 35px;
@@ -223,22 +215,22 @@ option {
 
 #word_submit {
   margin-left: 30px;
-  height: 45px;
+  height: 40px;
   width: 135px;
 }
 
 #arrow {
-  height: 45px;
-  width: 45px;
+  height: 40px;
+  width: 40px;
 }
 
 #word_value {
-  width: 392px;
+  width: 376px;
 }
 
 #translate-form, #filter-form {
   margin: 0 auto;
-  width: 430px;
+  width: 410px;
 }
 
 #save-button {
@@ -260,12 +252,13 @@ ul.custom {
 
 ul.custom li {
   padding-left: 30px;
-  background: #83abec url('../images/plus.png') 0 0 no-repeat;
-  line-height: 24px;
+  background: #fff url('../images/plus.png') 3px 3px no-repeat;
+  line-height: 30px;
   border: 1px solid #1E64C8;
   margin-top: 7px;
   width: 500px;
   cursor: pointer;
+  -moz-border-radius: 10px;
 }
 
 ul.custom ol {
@@ -283,9 +276,21 @@ ul.custom ol li {
 
 ul.custom dt {
   height: 30px;
+  font-weight: bold;
 }
 
 ul.custom dd {
   display: none;
   margin: 0 10px 20px;
+}
+
+#translation {
+  background: #fff;
+  border: 1px solid #1E64C8;
+  -moz-border-radius: 10px;
+  padding: 15px 45px;
+}
+
+#translation li {
+  cursor: default;
 }
