--- a/app/views/words/_results.html.erb
+++ b/app/views/words/_results.html.erb
@@ -6,9 +6,9 @@
     </div>
   <% else %>
     Translation <span id="word" class="strong">
-      <%= @word %></span> from <span id="from" class="strong">
-      <%= @from %></span> to <span id="to" class="strong">
-      <%= @to %></span>:
+      <%= @word.value %></span> from <span id="from" class="strong">
+      <%= @from.value %></span> to <span id="to" class="strong">
+      <%= @to.value %></span>:
     <ol id="translation" class="custom">
       <% @results.each do |meaning| %>
         <li>
@@ -18,6 +18,7 @@
     </ol>
     <div class="buttons">
       <%= submit_tag 'Save', :id => 'save-button' %>
+      <span class="flash"></span>
     </div>
   <% end %>
 </div>
