--- a/app/views/exceptions/500.html.erb
+++ b/app/views/exceptions/500.html.erb
@@ -1,3 +1,5 @@
 <%= image_tag '500.jpg', :alt => '500' %>
-<strong>Seems like something went really wrong.</strong>
-Go to <%= link_to 'home page', '/' %> .
+<div class="exception-message">
+  <strong>Seems like something went really wrong.</strong>
+  Go to <%= link_to 'home page', '/' %> .
+</div>
