--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -100,6 +100,11 @@ form div {
   border: 1px solid #CC0000;
 }
 
+#flash {
+  display: block;
+  margin: 0 0 10px;
+}
+
 label {
   position: absolute;
   top: 0;
@@ -366,4 +371,8 @@ ul.custom dd {
 
 .exception-message {
   margin: 10px 0 0;
+}
+
+#edit-password-form {
+  width: 354px;
 }
