--- a/app/views/layouts/exception.html.erb
+++ b/app/views/layouts/exception.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
     <title>Memorizr</title>
     <%= stylesheet_link_tag :all %>
     <%= csrf_meta_tag %>
