--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,3 +1,4 @@
+<meta content="text/html; charset=UTF-8" http-equiv="content-type" />
 <title>Memorizr</title>
 <%= stylesheet_link_tag :all %>
 <%= javascript_include_tag  'vendor/jquery-1.4.2.min',
