--- a/app/views/layouts/anonymous.html.erb
+++ b/app/views/layouts/anonymous.html.erb
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
     <title>Memorizr</title>
     <%= stylesheet_link_tag :all %>
+    <%= javascript_include_tag  'vendor/jquery-1.4.2.min', 'anonymous' %>
     <%= csrf_meta_tag %>
   </head>
   <body>
