--- a/app/views/words/_results.html.erb
+++ b/app/views/words/_results.html.erb
@@ -12,7 +12,7 @@
     <ol id="translation" class="custom">
       <% @results.each do |meaning| %>
         <li>
-          <%= meaning %>
+          <%= meaning.value %>
         </li>
       <% end %>
     </ol>
